<resources>
    <string name="app_name">Gymate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_routines">Explore routines</string>
    <string name="title_profile">Profile</string>
    <string name="popular_routines">POPULAR ROUTINES</string>
    <string name="routines">Routines</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Invalid user</string>
    <string name="invalid_password">The password must have more than 5 characters.</string>
    <string name="user_name">Username</string>
    <string name="my_favorite_routines">My favorite routines</string>
    <string name="next_ex">next exercise</string>
    <string name="warmup">Warm Up</string>
    <string name="ex_name">Exercise name</string>
    <string name="ex_description">This is a description of the exercise you are doing.</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Jane Doe</string>
    <string name="my_routines_upper">MY ROUTINES</string>
    <string name="ready">ready</string>
    <string name="restart">restart</string>
    <string name="log_in">Log in</string>
    <string name="logo">Gymate</string>
    <string name="profile_pic">Profile picture</string>
    <string name="my_routines">My routines</string>
    <string name="ex_image">exercise image</string>
    <string name="category">Category</string>
    <string name="rate">Rating</string>
    <string name="difficulty">Difficulty</string>
    <string name="date_created">Creation date</string>
    <string name="routine_name">routine name</string>
    <string name="cycle_name">cycle name</string>
    <string name="description">DESCRIPTION</string>
    <string name="execute">Execute</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="secs">secs</string>
    <string name="number">45</string>
    <string name="recent_routines">Recent routines</string>
    <string name="play_as_list">Play as list</string>
    <string name="play_with_detail">Play with detail</string>
    <string name="main">Main</string>
    <string name="cooldown">Cooldown</string>
    <string name="subject">Try this routine!</string>
    <string name="RateRoutineDialog">Rate this routine</string>
    <string name="Rate">Rate</string>
    <string name="Close">close</string>
    <string name="pause">pause</string>
    <string name="next">next</string>
    <string name="play">play</string>
    <string name="previous">previous</string>
    <string name="desc">DESC</string>
    <string name="asc">ASC</string>
    <string-array name="spinner_array">
        <item>Category</item>
        <item>Creation date</item>
        <item>Difficulty</item>
        <item>Rating</item>
        <item>Title</item>
    </string-array>
    <string name="wrong_credentials">Invalid username or password. Please try again.</string>
    <string name="default_error">Invalid username or password, try again.</string>
    <string name="finish_routine">You just finish your routine. Well done!</string>
</resources>