<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/navigation_routines"
        android:icon="@drawable/ic_baseline_explore_24"
        android:orderInCategory="2"
        android:title="@string/title_routines" />

    <item
        android:id="@+id/navigation_my_routines"
        android:icon="@drawable/ic_baseline_fitness_center_24"
        android:orderInCategory="3"
        android:title="@string/my_routines" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile"
        android:orderInCategory="4"/>

</menu>