<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_rate"
        android:icon="@drawable/ic_star"
        android:orderInCategory="1"
        android:title="@string/rate"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_favorite_outlined"
        android:icon="@drawable/ic_favorite_outlined"
        android:orderInCategory="2"
        android:title="@string/favorite"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_favorite_filled"
        android:icon="@drawable/ic_favorite_filled"
        android:orderInCategory="2"
        android:title="@string/favorite"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="3"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>